# QAutoStart

./: .gitignore  CMakeLists.txt  README.md  qautostart-members.html  qautostart-module.html  qautostart.html  qautostart.index
.github/workflows/: ci.yml
docs/: qautostart.qdocconf
example/: CMakeLists.txt  main.cpp
src/: QAutoStart.cpp  QAutoStart.h
src/backends/: QAutoStartLinux.cpp  QAutoStartLinux.h  QAutoStartMac.cpp  QAutoStartMac.h  QAutoStartWin.cpp  QAutoStartWin.h
tests/: CMakeLists.txt  tst_qautostart.cpp
